// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders different modal sections 1`] = `
<h4
  class="sc-AxhCb dVLHrv sc-AxgMl ebnCtC"
  id="abcdef"
>
  Header
</h4>
`;

exports[`renders different modal sections 2`] = `
<div
  class="sc-Axmtr lgUceX"
>
  Body
</div>
`;

exports[`renders different modal sections 3`] = `
<div
  class="sc-AxmLO eIBJSj"
>
  Footer
</div>
`;
